conformance/tests/httproute-backend-url-rewrite.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-url-rewrite
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /full
    backendRefs:
    - name: infra-backend-v1
      port: 8080
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplaceFullPath
            replaceFullPath: /rewritten-full
  - matches:
    - path:
        type: PathPrefix
        value: /prefix
    backendRefs:
    - name: infra-backend-v1
      port: 8080
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /rewritten-prefix
